fixed legend text alignment'

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,9 @@ html, body {
 }
 
 .legend-item img {
+	float: left;
 	margin-right: 10px;
+	padding-bottom: 1.5em;
 }
 
 .table tr {
